# gnome-desktop-programming

./: .gitignore  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
attic/book/: introduction.tex
attic/chapters/: Makefile  chapter1.tex  chapter1_fig1.dia  hello.c
book/: chapter1.tex  chapter2.tex  chapter3.tex
chapters/: Makefile  chapter1.tex
md/: allocations.md  bsearch.md
tex/: commands.tex  glib_basicdata.tex  glib_ch1.tex  glib_ch2.tex  glib_ch3.tex  glib_ch4.tex  glib_ch5.tex  glib_crypto.tex  glib_datastructs.tex  glib_datetime.tex  glib_essentials.tex  glib_io.tex  glib_mainloop.tex  glib_processes.tex  glib_regex.tex  glib_strings.tex  glib_threads.tex  glib_variant.tex  gnome-desktop-programming.tex  introduction.tex  preamble.tex
